home section finished

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Responsive web application using html/css/sass",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel watch:sass devserver"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,9 @@
   "homepage": "https://github.com/MJony05/MagicMusic#readme",
   "devDependencies": {
     "node-sass": "^7.0.1"
+  },
+  "dependencies": {
+    "start": "^5.1.0",
+    "startt": "^1.0.0"
   }
 }
